[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cltv-prediction"
version = "1.0.0"
description = "Advanced Customer Lifetime Value & Churn Prediction Platform with AI-Driven Insights"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joshua Morrison", email = "joshamorrison@gmail.com"}
]
keywords = ["cltv", "customer-lifetime-value", "churn-prediction", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # Core Dependencies
    "pandas>=2.0.0",
    "numpy>=1.21.0", 
    "scikit-learn>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    
    # Machine Learning
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    
    # Agent Framework
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.8",
    "openai>=1.12.0",
    
    # Experiment Tracking
    "mlflow>=2.10.0",
    
    # Time Series & Survival Analysis
    "statsmodels>=0.14.0",
    "lifelines>=0.27.0",
    
    # Data Preprocessing
    "feature-engine>=1.6.0",
    "category-encoders>=2.6.0",
    "imbalanced-learn>=0.11.0",
    
    # Model Interpretation
    "shap>=0.44.0",
    "lime>=0.2.0",
    
    # API Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    
    # Web Interface
    "streamlit>=1.30.0",
    
    # Cloud Integration
    "boto3>=1.34.0",
    "s3fs>=2023.12.0",
    
    # Visualization
    "plotly>=5.17.0",
    
    # Workflow Orchestration
    "apache-airflow>=2.8.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]

all = [
    "cltv-prediction[dev,jupyter]"
]

[project.urls]
Homepage = "https://github.com/joshamorrison/portfolio-cltv"
Documentation = "https://github.com/joshamorrison/portfolio-cltv/blob/main/README.md"
Repository = "https://github.com/joshamorrison/portfolio-cltv.git"
"Bug Tracker" = "https://github.com/joshamorrison/portfolio-cltv/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true